--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^4.2.0",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1"
   },
@@ -23,6 +24,7 @@
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-plugin-import": "^2.24.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
