--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,12 +40,15 @@ services:
   
   mongo:
     image: mongo:5.0.3
-    container_name: mongo
+    container_name: mongodb
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: mydb
     ports:
       - 27017:27017
+    volumes:
+      - ./db/init.js:/docker-entrypoint-initdb.d/init.js
 
   mongo-express:
     image: mongo-express
@@ -56,4 +59,4 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongodb:27017/
