Update UI to node version 19
I am experimenting with domain here.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,17 @@ services:
   #   ports:
   #     - "5005:5005"
 
-  # ui:
-  #   build:
-  #     context: .
-  #     dockerfile: bot/Dockerfile
-  #   container_name: ui
-  #   ports:
-  #     - "5000:5000"
-
+  ui:
+    build:
+      context: .
+      dockerfile: ui/Dockerfile
+    container_name: ui
+    image: ui
+    # volumes:
+    #   - ./ui:/ui
+    # ports:
+    #   - "3000:3000"
+    # entrypoint: /bin/sh -c "sleep infinity"
 
   # backend:
   #   build: .
@@ -37,26 +40,3 @@ services:
   #     - 5432:5432
   #   volumes:
   #     - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
-  
-  mongo:
-    image: mongo:5.0.3
-    container_name: mongodb
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-      MONGO_INITDB_DATABASE: mydb
-    ports:
-      - 27017:27017
-    volumes:
-      - ./db/init.js:/docker-entrypoint-initdb.d/init.js
-
-  mongo-express:
-    image: mongo-express
-    container_name: mongo-express
-    # restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongodb:27017/
